~ fully qualified imports ~ replaced 'new Integer(x)' with 'Integer.valueOf(x)'